fixing spacing between list and paragraph

--- a/docs/styles/projects.css
+++ b/docs/styles/projects.css
@@ -223,6 +223,7 @@ section {
         flex-direction: column;
         align-items: center;
         gap: 10px;
+        margin-top: 10px;
     }
 
     .projectLinks {
